# deep-research-py

./: LICENSE  README.md  output.md  pyproject.toml
deep_research_py/: deep_research.py  feedback.py  prompt.py  run.py
deep_research_py/ai/: providers.py  text_splitter.py
